@@ -5,6 +5,7 @@ Bugfixes
 --------
 - Fix issue with changing Label positions by fractional values.
 - Avoid performance issue due to unnecessary context switching with single Window programs.
+- Fix crash on Player.next_source when playing video has no audio track.
 
 Changes
 --------
